Changed 2nd layer from random norm to a sift-based feature

--- a/cnn_classifier_2.ipynb
+++ b/cnn_classifier_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 54,
    "metadata": {
     "collapsed": true
    },
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 55,
    "metadata": {
     "collapsed": true
    },
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 56,
    "metadata": {
     "collapsed": false
    },
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 57,
    "metadata": {
     "collapsed": false
    },
@@ -173,7 +173,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 58,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "x_dir = numpy.array([[-1, 0, 1], [-1, 0, 1], [-1, 0, 1]]);\n",
+    "y_dir = numpy.transpose(x_dir);\n",
+    "\n",
+    "siftAll = numpy.zeros([3,3,8]);\n",
+    "\n",
+    "siftAll[:, :, 0] = numpy.dot(x_dir, y_dir);\n",
+    "siftAll[:, :, 1] = numpy.dot(x_dir, -1 * y_dir);\n",
+    "siftAll[:, :, 2] = numpy.dot(-1 * x_dir, y_dir);\n",
+    "siftAll[:, :, 3] = numpy.dot(-1 * x_dir, -1 * y_dir);\n",
+    "siftAll[:, :, 4] = numpy.dot(-1 * y_dir, -1 * x_dir);\n",
+    "siftAll[:, :, 5] = numpy.dot(-1 * y_dir, x_dir);\n",
+    "siftAll[:, :, 6] = numpy.dot(y_dir, -1 * x_dir);\n",
+    "siftAll[:, :, 7] = numpy.dot(y_dir, x_dir);\n",
+    "\n",
+    "sift = tf.constant(siftAll, dtype=tf.float32);\n",
+    "sift8 = tf.reshape(sift, [3, 3, 1, 8]);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
    "metadata": {
     "collapsed": false
    },
@@ -182,44 +208,36 @@
     "filter_size = {\n",
     "    'wc1' : 11,\n",
     "    'wc2' : 5,\n",
-    "    'wc3' : 3\n",
     "}\n",
     "\n",
     "input_size = {\n",
     "    'wc1' : 1,\n",
-    "    'wc2' : 96,\n",
-    "    'wc3' : 256,\n",
-    "    'fc1' : 384,\n",
-    "    'out' : 4096,\n",
+    "    'wc2' : 8,\n",
+    "    'fc1' : 8,\n",
+    "    'out' : 12,\n",
     "}\n",
     "\n",
     "input_wh = {\n",
     "    'wc1' : 500,\n",
     "    'wc2' : 84,\n",
-    "    'wc3' : 42,\n",
-    "    'fc1' : 21,\n",
+    "    'fc1' : 42,\n",
     "}\n",
     "\n",
     "num_filters = {\n",
-    "    'wc1' : 96,\n",
-    "    'wc2' : 256,\n",
-    "    'wc3' : 384,\n",
-    "    'fc1' : 4096\n",
+    "    'wc1' : 8,\n",
+    "    'wc2' : 8,\n",
+    "    'fc1' : 12\n",
     "}\n",
     "\n",
     "weights = {\n",
     "    #5x5 convolution, 1 depth layer input, 96 depth layer outputs\n",
-    "    'wc1' : tf.Variable(tf.random_normal([filter_size['wc1'], filter_size['wc1'], input_size['wc1'], num_filters['wc1']])),\n",
+    "    'wc1' : sift8,\n",
     "    \n",
     "    'mp1' : 2,\n",
     "    \n",
     "    'wc2' : tf.Variable(tf.random_normal([filter_size['wc2'], filter_size['wc2'], input_size['wc2'], num_filters['wc2']])),\n",
     "    \n",
     "    'mp2' : 2,\n",
-    "    \n",
-    "    'wc3' : tf.Variable(tf.random_normal([filter_size['wc3'], filter_size['wc3'], input_size['wc3'], num_filters['wc3']])),\n",
-    "    \n",
-    "    'mp3' : 2,\n",
     "    \n",
     "    'fc1' : tf.Variable(tf.random_normal([input_wh['fc1'] * input_wh['fc1'] * input_size['fc1'], num_filters['fc1']])),\n",
     "    \n",
@@ -230,14 +248,12 @@
     "    \n",
     "    'wc1' : 3,\n",
     "    'wc2' : 1,\n",
-    "    'wc3' : 1,\n",
     "}\n",
     "\n",
     "biases = {\n",
     "    \n",
     "    'bc1' : tf.Variable(tf.random_normal([num_filters['wc1']])),\n",
     "    'bc2' : tf.Variable(tf.random_normal([num_filters['wc2']])),\n",
-    "    'bc3' : tf.Variable(tf.random_normal([num_filters['wc3']])),\n",
     "    'fc1' : tf.Variable(tf.random_normal([num_filters['fc1']])),\n",
     "    'out' : tf.Variable(tf.random_normal([n_classes]))\n",
     "}"
@@ -245,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 60,
    "metadata": {
     "collapsed": false
    },
@@ -284,13 +300,7 @@
     "    conv2 = maxpool2d(conv2, k=weights['mp2']);\n",
     "    print('pool2  ', conv2.get_shape(), get_size(conv2));\n",
     "    \n",
-    "    conv3 = conv2d(conv2, weights['wc3'], biases['bc3'], strides=strides['wc3']);\n",
-    "    print('conv3  ', conv3.get_shape(), get_size(conv3));\n",
-    "    \n",
-    "    conv3 = maxpool2d(conv3, k=weights['mp3']);\n",
-    "    print('pool3  ', conv3.get_shape(), get_size(conv3));\n",
-    "    \n",
-    "    fc1 = tf.reshape(conv3, [-1, weights['fc1'].get_shape().as_list()[0]]);\n",
+    "    fc1 = tf.reshape(conv2, [-1, weights['fc1'].get_shape().as_list()[0]]);\n",
     "    fc1 = tf.add(tf.matmul(fc1, weights['fc1']), biases['fc1']);\n",
     "    fc1 = tf.nn.relu(fc1);\n",
     "    print('fcon1  ', fc1.get_shape(), get_size(fc1));\n",
@@ -305,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 61,
    "metadata": {
     "collapsed": false
    },
@@ -314,13 +324,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "conv1   (?, 167, 167, 96) 2677344\n",
-      "pool1  (?, 84, 84, 96) 677376\n",
-      "conv2   (?, 84, 84, 256) 1806336\n",
-      "pool2   (?, 42, 42, 256) 451584\n",
-      "conv3   (?, 42, 42, 384) 677376\n",
-      "pool3   (?, 21, 21, 384) 169344\n",
-      "fcon1   (?, 4096) 4096\n",
+      "conv1   (?, 167, 167, 8) 223112\n",
+      "pool1  (?, 84, 84, 8) 56448\n",
+      "conv2   (?, 84, 84, 8) 56448\n",
+      "pool2   (?, 42, 42, 8) 14112\n",
+      "fcon1   (?, 12) 12\n",
       "outp1   (?, 2) 2\n"
      ]
     }
@@ -339,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 62,
    "metadata": {
     "collapsed": false
    },
@@ -374,7 +382,7 @@
       "completed on batch  230\n",
       "completed on batch  240\n",
       "optimization finished\n",
-      "Testing accuracy:  0.568\n"
+      "Testing accuracy:  0.456\n"
      ]
     }
    ],
