fixed sift features to 8 directions

--- a/cnn_classifier_2.ipynb
+++ b/cnn_classifier_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 69,
    "metadata": {
     "collapsed": false
    },
@@ -82,60 +82,58 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "250\n",
-      "250\n",
-      "[500, 500]\n"
+      "num dogs:  2563\n",
+      "num cats:  2437\n",
+      "num dogs:  1020\n",
+      "num cats:  980\n",
+      "5000\n",
+      "2000\n",
+      "[250, 250]\n"
      ]
     }
    ],
    "source": [
-    "max_size = [500, 500];\n",
+    "max_size = [250, 250];\n",
     "\n",
     "def load_images_and_labels(files_dir, image_names, size_sample):    \n",
     "    image_set = numpy.random.choice(image_names, size=size_sample);\n",
     "    \n",
     "    loaded_images = [];\n",
     "    labels_list = [];\n",
+    "    num_dogs = 0;\n",
+    "    num_cats = 0;\n",
     "    \n",
     "    for fname in image_set:\n",
     "        img = cv2.imread(files_dir + fname);\n",
     "        \n",
     "        if 'cat' in fname:\n",
     "            labels_list.append([0,1]);\n",
+    "            num_cats = num_cats + 1;\n",
     "        elif 'dog' in fname:\n",
     "            labels_list.append([1,0]);\n",
+    "            num_dogs = num_dogs + 1;\n",
     "        else:\n",
     "            labels_list.append([0,0]);\n",
     "\n",
     "        loaded_images.append(img);\n",
-    "        \n",
+    "    \n",
+    "    print(\"num dogs: \" , num_dogs);\n",
+    "    print(\"num cats: \" , num_cats);\n",
     "    return [loaded_images, labels_list];\n",
     "\n",
     "def process_images(images, border_size):\n",
     "    images_list = [];\n",
-    "\n",
     "    print(len(images))\n",
     "    for image_pos in range(0, len(images)):\n",
     "        img = images[image_pos];\n",
-    "        \n",
-    "        width_diff = (border_size[1] - img.shape[1]);\n",
-    "        height_diff = (border_size[0] - img.shape[0]);\n",
-    "    \n",
-    "        width_diffs = [width_diff // 2, width_diff - (width_diff // 2)];\n",
-    "        height_diffs = [height_diff // 2, height_diff - (height_diff // 2)];\n",
-    "        \n",
-    "        bet_img = cv2.copyMakeBorder(img, height_diffs[0], height_diffs[1], width_diffs[0], width_diffs[1], cv2.BORDER_CONSTANT, value=[0,0,0]);\n",
-    "        \n",
+    "        bet_img= cv2.resize(img,(border_size[0],border_size[1]));\n",
     "        bw_img = cv2.cvtColor(bet_img, cv2.COLOR_BGR2GRAY);\n",
-    "        \n",
     "        flat_image = numpy.reshape(bw_img, [bw_img.shape[0] * bw_img.shape[1]]);\n",
-    "        #flat_image = flat_image.astype('float32');\n",
-    "        \n",
     "        images_list.append(flat_image);\n",
-    "        \n",
-    "    \n",
+    "       \n",
+    "   \n",
     "    images_list = numpy.array(images_list);\n",
-    "    \n",
+    "\n",
     "    return images_list;\n",
     "#print(images_with_labels);\n",
     "\n",
@@ -146,13 +144,14 @@
     "batch_size = 128;\n",
     "display_step = 10;\n",
     "\n",
-    "num_train_images = 250;\n",
-    "num_test_images = 250;\n",
+    "num_train_images = 5000;\n",
+    "num_test_images = 2000;\n",
     "\n",
     "train_and_test_set = numpy.random.choice(train_file_names, num_train_images + num_test_images);\n",
     "\n",
     "train_images, train_labels = load_images_and_labels(train_dir, train_and_test_set[:num_train_images], num_train_images);\n",
     "test_images, test_labels = load_images_and_labels(train_dir, train_and_test_set[num_train_images:num_train_images+num_test_images], num_test_images);\n",
+    "\n",
     "\n",
     "train_images = process_images(train_images, max_size);\n",
     "test_images = process_images(test_images, max_size);\n",
@@ -173,60 +172,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 70,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tensor(\"Reshape_30:0\", shape=(3, 3, 8, 8), dtype=float32)\n"
+     ]
+    }
+   ],
    "source": [
-    "x_dir = numpy.array([[-1, 0, 1], [-1, 0, 1], [-1, 0, 1]]);\n",
+    "x_dir = numpy.array([[-1, 0, 1], [-2, 0, 2], [-1, 0, 1]]);\n",
     "y_dir = numpy.transpose(x_dir);\n",
+    "xy_dir = numpy.array([[0, 1, 2], [-1, 0, 1], [-2, 1, 0]]);\n",
+    "yx_dir = numpy.array([[2, 1, 0], [1, 0, -1], [0, -1, -2]]);\n",
     "\n",
     "siftAll = numpy.zeros([3,3,8]);\n",
+    "siftAll[:, :, 0] = -1 * x_dir;\n",
+    "siftAll[:, :, 1] = -1 * yx_dir;\n",
+    "siftAll[:, :, 2] = y_dir;\n",
+    "siftAll[:, :, 3] = xy_dir;\n",
+    "siftAll[:, :, 4] = x_dir;\n",
+    "siftAll[:, :, 5] = -1 * xy_dir;\n",
+    "siftAll[:, :, 6] = -1 * y_dir;\n",
+    "siftAll[:, :, 7] = yx_dir;\n",
     "\n",
-    "siftAll[:, :, 0] = numpy.dot(x_dir, y_dir);\n",
-    "siftAll[:, :, 1] = numpy.dot(x_dir, -1 * y_dir);\n",
-    "siftAll[:, :, 2] = numpy.dot(-1 * x_dir, y_dir);\n",
-    "siftAll[:, :, 3] = numpy.dot(-1 * x_dir, -1 * y_dir);\n",
-    "siftAll[:, :, 4] = numpy.dot(-1 * y_dir, -1 * x_dir);\n",
-    "siftAll[:, :, 5] = numpy.dot(-1 * y_dir, x_dir);\n",
-    "siftAll[:, :, 6] = numpy.dot(y_dir, -1 * x_dir);\n",
-    "siftAll[:, :, 7] = numpy.dot(y_dir, x_dir);\n",
+    "siftAll8 = numpy.asarray([siftAll] * 8);\n",
     "\n",
     "sift = tf.constant(siftAll, dtype=tf.float32);\n",
-    "sift8 = tf.reshape(sift, [3, 3, 1, 8]);"
+    "sift8 = tf.reshape(sift, [3, 3, 1, 8]);\n",
+    "\n",
+    "sift8_8 = tf.constant(siftAll8, dtype=tf.float32);\n",
+    "sift8_8 = tf.reshape(sift8_8, [3, 3, 8, 8]);\n",
+    "\n",
+    "print(sift8_8);"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 71,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "filter_size = {\n",
-    "    'wc1' : 11,\n",
-    "    'wc2' : 5,\n",
+    "    'wc1' : 3,\n",
+    "    'wc2' : 3,\n",
     "}\n",
     "\n",
     "input_size = {\n",
-    "    'wc1' : 1,\n",
+    "    'wc1' : 3,\n",
     "    'wc2' : 8,\n",
     "    'fc1' : 8,\n",
-    "    'out' : 12,\n",
+    "    'out' : 6,\n",
     "}\n",
     "\n",
     "input_wh = {\n",
-    "    'wc1' : 500,\n",
-    "    'wc2' : 84,\n",
-    "    'fc1' : 42,\n",
+    "    'wc1' : 250,\n",
+    "    'wc2' : 125,\n",
+    "    'fc1' : 63,\n",
     "}\n",
     "\n",
     "num_filters = {\n",
     "    'wc1' : 8,\n",
     "    'wc2' : 8,\n",
-    "    'fc1' : 12\n",
+    "    'fc1' : 6,\n",
     "}\n",
     "\n",
     "weights = {\n",
@@ -235,7 +250,7 @@
     "    \n",
     "    'mp1' : 2,\n",
     "    \n",
-    "    'wc2' : tf.Variable(tf.random_normal([filter_size['wc2'], filter_size['wc2'], input_size['wc2'], num_filters['wc2']])),\n",
+    "    'wc2' : sift8_8,\n",
     "    \n",
     "    'mp2' : 2,\n",
     "    \n",
@@ -246,7 +261,7 @@
     "\n",
     "strides = {\n",
     "    \n",
-    "    'wc1' : 3,\n",
+    "    'wc1' : 1,\n",
     "    'wc2' : 1,\n",
     "}\n",
     "\n",
@@ -261,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 72,
    "metadata": {
     "collapsed": false
    },
@@ -315,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 73,
    "metadata": {
     "collapsed": false
    },
@@ -324,11 +339,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "conv1   (?, 167, 167, 8) 223112\n",
-      "pool1  (?, 84, 84, 8) 56448\n",
-      "conv2   (?, 84, 84, 8) 56448\n",
-      "pool2   (?, 42, 42, 8) 14112\n",
-      "fcon1   (?, 12) 12\n",
+      "conv1   (?, 250, 250, 8) 500000\n",
+      "pool1  (?, 125, 125, 8) 125000\n",
+      "conv2   (?, 125, 125, 8) 125000\n",
+      "pool2   (?, 63, 63, 8) 31752\n",
+      "fcon1   (?, 6) 6\n",
       "outp1   (?, 2) 2\n"
      ]
     }
@@ -347,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 74,
    "metadata": {
     "collapsed": false
    },
@@ -357,32 +372,12 @@
      "output_type": "stream",
      "text": [
       "completed on batch  0\n",
-      "completed on batch  10\n",
-      "completed on batch  20\n",
-      "completed on batch  30\n",
-      "completed on batch  40\n",
-      "completed on batch  50\n",
-      "completed on batch  60\n",
-      "completed on batch  70\n",
-      "completed on batch  80\n",
-      "completed on batch  90\n",
-      "completed on batch  100\n",
-      "completed on batch  110\n",
-      "completed on batch  120\n",
-      "completed on batch  130\n",
-      "completed on batch  140\n",
-      "completed on batch  150\n",
-      "completed on batch  160\n",
-      "completed on batch  170\n",
-      "completed on batch  180\n",
-      "completed on batch  190\n",
-      "completed on batch  200\n",
-      "completed on batch  210\n",
-      "completed on batch  220\n",
-      "completed on batch  230\n",
-      "completed on batch  240\n",
+      "completed on batch  1000\n",
+      "completed on batch  2000\n",
+      "completed on batch  3000\n",
+      "completed on batch  4000\n",
       "optimization finished\n",
-      "Testing accuracy:  0.456\n"
+      "Testing accuracy:  0.5095\n"
      ]
     }
    ],
@@ -397,7 +392,7 @@
     "        #print(batch_x.shape, batch_y.shape);\n",
     "        session.run(optimizer, feed_dict={x: batch_x, y:batch_y});\n",
     "        \n",
-    "        if batch_pos % 10 == 0:\n",
+    "        if batch_pos % 1000 == 0:\n",
     "            print('completed on batch ', batch_pos);\n",
     "    \n",
     "    print('optimization finished');\n",
