added relu layer

--- a/cnn_classifier_2.ipynb
+++ b/cnn_classifier_2.ipynb
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 76,
    "metadata": {
     "collapsed": false
    },
@@ -308,12 +308,18 @@
     "    \n",
     "    conv1 = maxpool2d(conv1, k=weights['mp1']);\n",
     "    print('pool1 ', conv1.get_shape(), get_size(conv1));\n",
+    "    \n",
+    "    conv1 = tf.nn.relu(conv1);\n",
+    "    print('relu1 ', conv1.get_shape(), get_size(conv1));\n",
     "\n",
     "    conv2 = conv2d(conv1, weights['wc2'], biases['bc2'], strides=strides['wc2']);\n",
     "    print('conv2  ', conv2.get_shape(), get_size(conv2));\n",
     "    \n",
     "    conv2 = maxpool2d(conv2, k=weights['mp2']);\n",
     "    print('pool2  ', conv2.get_shape(), get_size(conv2));\n",
+    "    \n",
+    "    conv2 = tf.nn.relu(conv2);\n",
+    "    print('relu2 ', conv2.get_shape(), get_size(conv2));\n",
     "    \n",
     "    fc1 = tf.reshape(conv2, [-1, weights['fc1'].get_shape().as_list()[0]]);\n",
     "    fc1 = tf.add(tf.matmul(fc1, weights['fc1']), biases['fc1']);\n",
@@ -330,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 77,
    "metadata": {
     "collapsed": false
    },
@@ -341,8 +347,10 @@
      "text": [
       "conv1   (?, 250, 250, 8) 500000\n",
       "pool1  (?, 125, 125, 8) 125000\n",
+      "relu1  (?, 125, 125, 8) 125000\n",
       "conv2   (?, 125, 125, 8) 125000\n",
       "pool2   (?, 63, 63, 8) 31752\n",
+      "relu2  (?, 63, 63, 8) 31752\n",
       "fcon1   (?, 6) 6\n",
       "outp1   (?, 2) 2\n"
      ]
@@ -362,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -376,8 +384,7 @@
       "completed on batch  2000\n",
       "completed on batch  3000\n",
       "completed on batch  4000\n",
-      "optimization finished\n",
-      "Testing accuracy:  0.5095\n"
+      "optimization finished\n"
      ]
     }
    ],
