changed input dimensions to 3

--- a/cnn_classifier_2.ipynb
+++ b/cnn_classifier_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -82,12 +82,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "num dogs:  2563\n",
-      "num cats:  2437\n",
-      "num dogs:  1020\n",
-      "num cats:  980\n",
-      "5000\n",
-      "2000\n",
+      "num dogs:  223\n",
+      "num cats:  277\n",
+      "num dogs:  256\n",
+      "num cats:  244\n",
+      "500\n",
+      "500\n",
       "[250, 250]\n"
      ]
     }
@@ -126,12 +126,15 @@
     "    print(len(images))\n",
     "    for image_pos in range(0, len(images)):\n",
     "        img = images[image_pos];\n",
+    "        #print(\"img \", img.shape);\n",
     "        bet_img= cv2.resize(img,(border_size[0],border_size[1]));\n",
-    "        bw_img = cv2.cvtColor(bet_img, cv2.COLOR_BGR2GRAY);\n",
-    "        flat_image = numpy.reshape(bw_img, [bw_img.shape[0] * bw_img.shape[1]]);\n",
+    "        #print(\"bet_img \", bet_img.shape);\n",
+    "        #bw_img = cv2.cvtColor(bet_img, cv2.COLOR_BGR2GRAY);\n",
+    "        #print(\"bw_img \", bw_img.shape);\n",
+    "        flat_image = numpy.reshape(bet_img, [bet_img.shape[0] * bet_img.shape[1], bet_img.shape[2]]);\n",
+    "        #print(\"flat_img \", flat_image.shape);\n",
     "        images_list.append(flat_image);\n",
     "       \n",
-    "   \n",
     "    images_list = numpy.array(images_list);\n",
     "\n",
     "    return images_list;\n",
@@ -144,8 +147,8 @@
     "batch_size = 128;\n",
     "display_step = 10;\n",
     "\n",
-    "num_train_images = 5000;\n",
-    "num_test_images = 2000;\n",
+    "num_train_images = 500;\n",
+    "num_test_images = 500;\n",
     "\n",
     "train_and_test_set = numpy.random.choice(train_file_names, num_train_images + num_test_images);\n",
     "\n",
@@ -160,7 +163,7 @@
     "n_classes = 2; #total classes = 10\n",
     "dropout = 0.75; #probability to keep units\n",
     "\n",
-    "x = tf.placeholder(tf.float32, [None, n_input]);\n",
+    "x = tf.placeholder(tf.float32, [None, n_input, 3]);\n",
     "y = tf.placeholder(tf.float32, [None, n_classes]);\n",
     "keep_prob = tf.placeholder(tf.float32) #dropout\n",
     "\n",
@@ -172,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -181,7 +184,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tensor(\"Reshape_30:0\", shape=(3, 3, 8, 8), dtype=float32)\n"
+      "Tensor(\"Reshape:0\", shape=(3, 3, 3, 8), dtype=float32)\n",
+      "Tensor(\"Reshape_1:0\", shape=(3, 3, 8, 8), dtype=float32)\n"
      ]
     }
    ],
@@ -201,20 +205,23 @@
     "siftAll[:, :, 6] = -1 * y_dir;\n",
     "siftAll[:, :, 7] = yx_dir;\n",
     "\n",
+    "siftAll3 = numpy.asarray([siftAll] * 3);\n",
+    "\n",
     "siftAll8 = numpy.asarray([siftAll] * 8);\n",
     "\n",
-    "sift = tf.constant(siftAll, dtype=tf.float32);\n",
-    "sift8 = tf.reshape(sift, [3, 3, 1, 8]);\n",
+    "sift8_3 = tf.constant(siftAll3, dtype=tf.float32);\n",
+    "sift8_3 = tf.reshape(sift8_3, [3, 3, 3, 8]);\n",
     "\n",
     "sift8_8 = tf.constant(siftAll8, dtype=tf.float32);\n",
     "sift8_8 = tf.reshape(sift8_8, [3, 3, 8, 8]);\n",
     "\n",
+    "print(sift8_3);\n",
     "print(sift8_8);"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -246,7 +253,7 @@
     "\n",
     "weights = {\n",
     "    #5x5 convolution, 1 depth layer input, 96 depth layer outputs\n",
-    "    'wc1' : sift8,\n",
+    "    'wc1' : sift8_3,\n",
     "    \n",
     "    'mp1' : 2,\n",
     "    \n",
@@ -276,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -300,7 +307,7 @@
     "def conv_net(x, weights, biases, dropout):\n",
     "    #reshape input picture\n",
     "\n",
-    "    x = tf.reshape(x, shape=[-1, max_size[0], max_size[1], 1]);\n",
+    "    x = tf.reshape(x, shape=[-1, max_size[0], max_size[1], 3]);\n",
     "    \n",
     "    #convolution layer\n",
     "    conv1 = conv2d(x, weights['wc1'], biases['bc1'], strides=strides['wc1']);\n",
@@ -336,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -370,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -380,11 +387,8 @@
      "output_type": "stream",
      "text": [
       "completed on batch  0\n",
-      "completed on batch  1000\n",
-      "completed on batch  2000\n",
-      "completed on batch  3000\n",
-      "completed on batch  4000\n",
-      "optimization finished\n"
+      "optimization finished\n",
+      "Testing accuracy:  0.512\n"
      ]
     }
    ],
@@ -402,7 +406,7 @@
     "        if batch_pos % 1000 == 0:\n",
     "            print('completed on batch ', batch_pos);\n",
     "    \n",
-    "    print('optimization finished');\n",
+    "    print('Training finished');\n",
     "    \n",
     "    print('Testing accuracy: ', \\\n",
     "         session.run(accuracy, feed_dict={x: test_images, y:test_labels, keep_prob: 1}));\n",
