--- a/cnn_classifier_2.ipynb
+++ b/cnn_classifier_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -82,10 +82,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "num dogs:  223\n",
-      "num cats:  277\n",
-      "num dogs:  256\n",
-      "num cats:  244\n",
+      "num dogs:  260\n",
+      "num cats:  240\n",
+      "num dogs:  260\n",
+      "num cats:  240\n",
       "500\n",
       "500\n",
       "[250, 250]\n"
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -253,11 +253,11 @@
     "\n",
     "weights = {\n",
     "    #5x5 convolution, 1 depth layer input, 96 depth layer outputs\n",
-    "    'wc1' : sift8_3,\n",
+    "    'wc1' : tf.Variable(tf.random_normal([input_wh['wc1'], input_wh['wc1'] , input_size['wc1'], num_filters['wc1']])),\n",
     "    \n",
     "    'mp1' : 2,\n",
     "    \n",
-    "    'wc2' : sift8_8,\n",
+    "    'wc2' : tf.Variable(tf.random_normal([input_wh['wc2'] , input_wh['wc2'] , input_size['wc2'], num_filters['wc2']])),\n",
     "    \n",
     "    'mp2' : 2,\n",
     "    \n",
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -377,21 +377,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "completed on batch  0\n",
-      "optimization finished\n",
-      "Testing accuracy:  0.512\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "with tf.Session() as session:\n",
     "    session.run(init);\n",
