changed back to 3 layers with 32 filters each

--- a/cnn_classifier_2.ipynb
+++ b/cnn_classifier_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -82,10 +82,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "num dogs:  260\n",
-      "num cats:  240\n",
-      "num dogs:  260\n",
-      "num cats:  240\n",
+      "num dogs:  240\n",
+      "num cats:  260\n",
+      "num dogs:  258\n",
+      "num cats:  242\n",
       "500\n",
       "500\n",
       "[250, 250]\n"
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -230,24 +230,28 @@
     "filter_size = {\n",
     "    'wc1' : 3,\n",
     "    'wc2' : 3,\n",
+    "    'wc3' : 3,\n",
     "}\n",
     "\n",
     "input_size = {\n",
     "    'wc1' : 3,\n",
-    "    'wc2' : 8,\n",
-    "    'fc1' : 8,\n",
+    "    'wc2' : 32,\n",
+    "    'wc3' : 32,\n",
+    "    'fc1' : 64,\n",
     "    'out' : 6,\n",
     "}\n",
     "\n",
     "input_wh = {\n",
     "    'wc1' : 250,\n",
     "    'wc2' : 125,\n",
-    "    'fc1' : 63,\n",
+    "    'wc3' : 63,\n",
+    "    'fc1' : 32,\n",
     "}\n",
     "\n",
     "num_filters = {\n",
-    "    'wc1' : 8,\n",
-    "    'wc2' : 8,\n",
+    "    'wc1' : 32,\n",
+    "    'wc2' : 32,\n",
+    "    'wc3' : 64,\n",
     "    'fc1' : 6,\n",
     "}\n",
     "\n",
@@ -261,6 +265,10 @@
     "    \n",
     "    'mp2' : 2,\n",
     "    \n",
+    "    'wc3' : tf.Variable(tf.random_normal([input_wh['wc3'], input_wh['wc3'], input_size['wc3'], num_filters['wc3']])),\n",
+    "    \n",
+    "    'mp3' : 2,\n",
+    "    \n",
     "    'fc1' : tf.Variable(tf.random_normal([input_wh['fc1'] * input_wh['fc1'] * input_size['fc1'], num_filters['fc1']])),\n",
     "    \n",
     "    'out' : tf.Variable(tf.random_normal([input_size['out'], n_classes]))\n",
@@ -270,12 +278,14 @@
     "    \n",
     "    'wc1' : 1,\n",
     "    'wc2' : 1,\n",
+    "    'wc3' : 1,\n",
     "}\n",
     "\n",
     "biases = {\n",
     "    \n",
     "    'bc1' : tf.Variable(tf.random_normal([num_filters['wc1']])),\n",
     "    'bc2' : tf.Variable(tf.random_normal([num_filters['wc2']])),\n",
+    "    'bc3' : tf.Variable(tf.random_normal([num_filters['wc3']])),\n",
     "    'fc1' : tf.Variable(tf.random_normal([num_filters['fc1']])),\n",
     "    'out' : tf.Variable(tf.random_normal([n_classes]))\n",
     "}"
@@ -283,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -328,7 +338,16 @@
     "    conv2 = tf.nn.relu(conv2);\n",
     "    print('relu2 ', conv2.get_shape(), get_size(conv2));\n",
     "    \n",
-    "    fc1 = tf.reshape(conv2, [-1, weights['fc1'].get_shape().as_list()[0]]);\n",
+    "    conv3 = conv2d(conv2, weights['wc3'], biases['bc3'], strides=strides['wc3']);\n",
+    "    print('conv3  ', conv3.get_shape(), get_size(conv3));\n",
+    "    \n",
+    "    conv3 = maxpool2d(conv3, k=weights['mp3']);\n",
+    "    print('pool3  ', conv3.get_shape(), get_size(conv3));\n",
+    "    \n",
+    "    conv3 = tf.nn.relu(conv3);\n",
+    "    print('relu3 ', conv3.get_shape(), get_size(conv3));\n",
+    "    \n",
+    "    fc1 = tf.reshape(conv3, [-1, weights['fc1'].get_shape().as_list()[0]]);\n",
     "    fc1 = tf.add(tf.matmul(fc1, weights['fc1']), biases['fc1']);\n",
     "    fc1 = tf.nn.relu(fc1);\n",
     "    print('fcon1  ', fc1.get_shape(), get_size(fc1));\n",
@@ -343,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -352,12 +371,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "conv1   (?, 250, 250, 8) 500000\n",
-      "pool1  (?, 125, 125, 8) 125000\n",
-      "relu1  (?, 125, 125, 8) 125000\n",
-      "conv2   (?, 125, 125, 8) 125000\n",
-      "pool2   (?, 63, 63, 8) 31752\n",
-      "relu2  (?, 63, 63, 8) 31752\n",
+      "conv1   (?, 250, 250, 32) 2000000\n",
+      "pool1  (?, 125, 125, 32) 500000\n",
+      "relu1  (?, 125, 125, 32) 500000\n",
+      "conv2   (?, 125, 125, 32) 500000\n",
+      "pool2   (?, 63, 63, 32) 127008\n",
+      "relu2  (?, 63, 63, 32) 127008\n",
+      "conv3   (?, 63, 63, 64) 254016\n",
+      "pool3   (?, 32, 32, 64) 65536\n",
+      "relu3  (?, 32, 32, 64) 65536\n",
       "fcon1   (?, 6) 6\n",
       "outp1   (?, 2) 2\n"
      ]
@@ -393,7 +415,7 @@
     "        #print(batch_x.shape, batch_y.shape);\n",
     "        session.run(optimizer, feed_dict={x: batch_x, y:batch_y});\n",
     "        \n",
-    "        if batch_pos % 1000 == 0:\n",
+    "        if batch_pos % 10 == 0:\n",
     "            print('completed on batch ', batch_pos);\n",
     "    \n",
     "    print('Training finished');\n",
@@ -406,13 +428,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "1. add dropout layer of 0.5\n",
+    "2. add sigmoid layer as output\n",
+    "3. try rmsprop optimizer\n",
+    "4. look at dense layer\n"
+   ]
   }
  ],
  "metadata": {
