change in session variable which causes tf to crash

--- a/cnn_classifier_2.ipynb
+++ b/cnn_classifier_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -82,10 +82,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "num dogs:  240\n",
-      "num cats:  260\n",
-      "num dogs:  258\n",
-      "num cats:  242\n",
+      "num dogs:  257\n",
+      "num cats:  243\n",
+      "num dogs:  257\n",
+      "num cats:  243\n",
       "500\n",
       "500\n",
       "[250, 250]\n"
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -436,8 +436,18 @@
     "1. add dropout layer of 0.5\n",
     "2. add sigmoid layer as output\n",
     "3. try rmsprop optimizer\n",
-    "4. look at dense layer\n"
+    "4. look at dense layer\n",
+    "5. look at sequential"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
